[package]

name = "rustation"
# Exported as VERSION and VERSION_CSTR in the library
version = "0.0.2"
authors = ["Lionel Flandrin <lionel.flandrin@gmail.com>"]

description = "A PlayStation emulator"
homepage = "https://github.com/simias/rustation"
repository = "https://github.com/simias/rustation"
documentation = "https://github.com/simias/rustation/wiki"
readme = "README.md"
license = "GPL-2.0+"
keywords = ["emulator", "playstation"]

[lib]
name = "rustation"
crate-type = ["rlib"]

[dependencies]
shaman = "0.1.0"
log = "0.3.4"
arrayvec = "0.3.15"
arrayref = "0.3.2"

[dependencies.cdimage]
path = "cdimage"
